fix: .simple-article visibility for small screens

--- a/src/style/containers/simple-article.css
+++ b/src/style/containers/simple-article.css
@@ -15,5 +15,10 @@
     bottom: 5vh;
     left: 10vh;
   }
+}
 
+@media screen and (max-height: 550px) {
+  .simple-article{
+    visibility: hidden;
+  }
 }
